sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:5: error: '(' expected but identifier found.
      if plusPetit(i, j) {
         ^AlgBubbleSort1:8: error: illegal start of simple expression
    }
    ^